--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ height:10%;
 </head>
 <body>
     <div class="first">
-            <form action="/sendMail" method="post">
+            <form action="http://localhost:8003/sendMail" method="post">
                 <h1>Drop Your Message Here!</h1>
                 <div class="one"><input type="text" placeholder="FullName" name="name"></div>
                 <div class="two"><input type="text" placeholder="Email Address" name="email"></div>
